# stock-data-pipeline

./: .gitignore  README.md  main.py  pyproject.toml  test.py
.github/workflows/: run.yml
config/: spdr_sectors.txt  stocks.txt
data/: sector_shares_outstanding.csv  xlb_sector_history.csv  xlb_shares.csv  xlc_sector_history.csv  xlc_shares.csv  xle_sector_history.csv  xle_shares.csv  xlf_sector_history.csv  xlf_shares.csv  xli_sector_history.csv  xli_shares.csv  xlk_sector_history.csv  xlk_shares.csv  xlp_sector_history.csv  xlp_shares.csv  xlre_sector_history.csv  xlre_shares.csv  xlu_sector_history.csv  xlu_shares.csv  xlv_sector_history.csv  xlv_shares.csv  xly_sector_history.csv  xly_shares.csv
flow_chart/: flow_chart_v2.pptx
stock_data_pipeline/: __init__.py  chrome_driver.py  definitions.py  functions.py  load_yfinance_data.py  postgresql_connection.py  s3_connection.py  sector.py  sectors.py  ticker.py  tickers.py
