[tool.poetry]
authors = ["Nathan Oliver"]
description = "Use yfinance API to download stock data, refresh stock data using CI, transform data in SQL, and upload dataframe to AWS"
name = "stock-data-pipeline"
package-mode = false
version = "0.0"

[tool.poetry.dependencies]
yfinance = "0.2.54" # Use version 0.2.54 and sha fa3094daedf4a69e8af542e4bb171cbd3bd61862 if needed

[tool.poetry.dev-dependencies]
doit = "0.36.0"
tomli = "2.0.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
